@@ -1,3 +1,13 @@
+Mon May 16 19:22:39 2005  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* orbsvcs/orbsvcs/FtRtEvent/EventChannel/FTEC_Group_Manager.cpp:
+
+	  #include "orbsvcs/PortableGroup/PG_Operators.h" and remove the
+	  "bool operator==(const FTRT::Location&, const FTRT::Location&)"
+	  implementation.  FTRT::Location is typedef for CosNaming::Name,
+	  and the operator== implementation for that in the PortableGroup
+	  library conflict on MacOSX.
+
 Mon May 16 12:15:11 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* TAO_IDL/include/ast_component.h
